# history-mapped

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  langgraph.json  package.json  pnpm-lock.yaml  pyproject.toml  run_all_transcripts.sh  skills-lock.json
.do/: app.yaml
.github/workflows/: ci.yml
api/: .env.example  AGENTS.md  boost.json  composer.json  eslint.config.js  package-lock.json  package.json  phpunit.xml  vite.config.ts  vitest.config.ts
api/bootstrap/: app.php  providers.php
api/config/: ai.php  cors.php  (+4 more)
docker/: .env.prod.example  Caddyfile  docker-compose.prod.yml  docker-compose.yml
docs/: README.md  TODO.md  architecture-frontend-app.md  architecture_overview.md  data_pipeline_architecture.md  entity_specification.md  game_inspired_ui_ux.md  ohm_integraton_guide.md  pipeline-eval-iterations.md  reference_tables.md  setup.md  web_implementation_architecture.md
output/: topic_late_bronze_age_collapse.jsonl  topic_late_bronze_age_collapse_ref.jsonl  topic_late_bronze_age_collapse_untyped.jsonl  topic_roman_empire.jsonl  topic_roman_empire_ref.jsonl  topic_roman_empire_untyped.jsonl
pipeline/: .env.example  README.md  __init__.py  __main__.py  backfill_geo.py  backfill_summaries.py  config.py  detect_mislocated.py  eval_admin_agent_models.py  hand_locate_events.py  locate_events.py  merge_entities.py  repair_committed_data.py  requirements.txt  reresolve_entities.py
shared/: package.json  tsconfig.json
web/: .env.example  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
(+996 files in other folders)
